repair navbar collapse overlay

--- a/candidateV2/css/bootstrap.css
+++ b/candidateV2/css/bootstrap.css
@@ -4235,11 +4235,14 @@ input[type="button"].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  
 }
 
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  
+  
 }
 
 .nav-link:hover, .nav-link:focus {
@@ -4258,6 +4261,8 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-item {
   margin-bottom: -1px;
+  
+  
 }
 
 .nav-tabs .nav-link {
@@ -4393,13 +4398,16 @@ input[type="button"].btn-block {
   flex-grow: 1;
   -ms-flex-align: center;
   align-items: center;
+  z-index: 1;
+ 
+  
 }
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
-  background-color: transparent;
+  background-color: dark;
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
@@ -4454,6 +4462,7 @@ input[type="button"].btn-block {
     display: flex !important;
     -ms-flex-preferred-size: auto;
     flex-basis: auto;
+
   }
   .navbar-expand-sm .navbar-toggler {
     display: none;
