--- a/candidateV2/profile/css/bootstrap.css
+++ b/candidateV2/profile/css/bootstrap.css
@@ -4393,6 +4393,7 @@ input[type="button"].btn-block {
   flex-grow: 1;
   -ms-flex-align: center;
   align-items: center;
+  z-index: 1;
 }
 
 .navbar-toggler {
